[Editorial] shew --> show

--- a/src/epub/text/ajax.xhtml
+++ b/src/epub/text/ajax.xhtml
@@ -1948,7 +1948,7 @@
 								<br/>
 								<span>To prove the inbred virtue of thy race,</span>
 								<br/>
-								<span>And shew thy father’s foes whose son thou art.</span>
+								<span>And show thy father’s foes whose son thou art.</span>
 								<br/>
 								<span>Meanwhile let light airs feed thee; cherish thou</span>
 								<br/>
