--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,7 +12,7 @@
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.play">Ajax</i><br/>
-			was written around 442 <abbr epub:type="se:era">BCE</abbr> by<br/>
+			was written circa 442 <abbr epub:type="se:era">BCE</abbr> by<br/>
 			<a href="https://en.wikipedia.org/wiki/Sophocles">Sophocles</a>.<br/>
 			It was translated from Ancient Greek in 1913 by<br/>
 			<b epub:type="z3998:personal-name">Francis Storr</b>.</p>
