--- a/src/epub/text/ajax.xhtml
+++ b/src/epub/text/ajax.xhtml
@@ -4099,7 +4099,7 @@
 									<br/>
 									<span>Who first admonished the Greeks to league themselves for the war⁠—</span>
 									<br/>
-									<span>War, the father of toils, whence mortal serrows began;</span>
+									<span>War, the father of toils, whence mortal sorrows began;</span>
 									<br/>
 									<span>Yea, it was he who begat the plague and ruin of man.</span>
 								</p>
