--- a/src/epub/text/ajax.xhtml
+++ b/src/epub/text/ajax.xhtml
@@ -3983,7 +3983,7 @@
 								<br/>
 								<span>I see that wight before me, and methinks</span>
 								<br/>
-								<span>“Tis none but thou. Can’st read my riddle plain?</span>
+								<span>“ ’Tis none but thou. Can’st read my riddle plain?</span>
 							</p>
 						</td>
 					</tr>
